Some refactoring and adding letting cors for swagger to call apis. swagger updated as well.
